# boson

./: .envrc  .pre-commit-config.yaml  Cargo.toml
.github/workflows/: linux.yml  push.yml
benches/: boson_benchmark.rs
docs/high-level flow/: high-level flow.drawio
docs/launch-envvars/: all.sh  shell.sh  steam.sh
scripts/: log_steam_execution_envvars.sh
src/: lib.rs  libsboson.rs  main.rs
src/libsboson/: arg_parsing.rs  config.rs  generate.rs  steam.rs  steam_app.rs
tests/: lib_tests.rs  steamexec.rs
