[package]
name = "boson"
version = "0.1.0"
edition = "2018"
authors = ["Alan Jenkins <alan.james.jenkins@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "boson"
path = "src/main.rs"

[dependencies]
clap = "2.33.3"
dirs = "3.0"
regex = "1"
serde = "1.0.127"
tokio = { version = "1.5.0", features = ["full"] }
toml = "0.5"
vdf-serde = "0.3.0"

[dev-dependencies]
assert_cmd = "0.11.1"
criterion = "0.3.0"
quickcheck = "0.9.0"
quickcheck_macros = "0.8.0"
tempdir = "0.3.7"
